[gd_scene load_steps=5 format=2]

[ext_resource path="res://map_puzzle_2_v2/thunder_2_far.wav" type="AudioStream" id=1]
[ext_resource path="res://map_puzzle_2_v2/thunder_1_far.wav" type="AudioStream" id=2]
[ext_resource path="res://map_puzzle_2_v2/thunder_3_far.wav" type="AudioStream" id=3]
[ext_resource path="res://map_puzzle_2_v2/LightningFar.gd" type="Script" id=4]

[node name="LightningFar" type="Node2D"]
script = ExtResource( 4 )

[node name="Thunder1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Thunder2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Thunder3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
